<?xml version="1.0" encoding="utf-8"?>
<!-- ~ Copyright (c) 2014 and Confidential to Pegasystems Inc. All rights reserved. -->
<resources>

    <string name="app_name">U+ Bank</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="log_out">Logout</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="login_title1">U+</string>
    <string name="login_title2">Bank</string>
    <string name="register">Or create an account now</string>
    <string name="makeAPayment">Make a Payment</string>
    <string name="offers">Offers for you</string>
    <string name="date">Date</string>
    <string name="dispute_mtod">Disputing a charge only takes a few minutes. Simply answer some question and we\'ll
        take it from there. Once submitted, we\'ll let you know the status of your case and what to expect next.
    </string>
    <string name="lost_card">If you suspect your card is lost or stolen, please call 1–877-601-8029 to report it
        immediately
    </string>
    <string name="serverAddress">Server address</string>

</resources>
