<!--
  ~ Copyright (c) 2016 and Confidential to Pegasystems Inc. All rights reserved.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:orientation="vertical"
                                             tools:context="com.pega.ubank.MainActivity"
                                             tools:ignore="TextFields"
                                             android:background="@drawable/uplusbank_bkg"
                                             android:gravity="center">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:padding="16dp"
            android:id="@+id/linearLayout"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center_horizontal">
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/prompt_username"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        >
            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
            />
        </android.support.design.widget.TextInputLayout>
        <Button
                android:id="@+id/login"
                android:theme="@style/LoginButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:layout_marginBottom="8dp"
        />
        <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="32dp"
        />
    </LinearLayout>
    <TextView
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:clickable="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/clickable_text"/>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/title"
                  android:gravity="bottom|center_horizontal"
                  android:layout_margin="16dp"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintVertical_bias="0.0">
        <TextView
                android:text="@string/login_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title1"
                android:typeface="monospace"
                tools:text="U+"
                android:textSize="72sp"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:gravity="center"
                android:fontFamily="sans-serif-thin"
                tools:layout_constraintTop_creator="1"
                tools:layout_constraintRight_creator="1"
                app:layout_constraintRight_toRightOf="@+id/linearLayout"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/login_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title2"
                android:typeface="monospace"
                tools:text="Bank"
                android:textSize="56sp"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:gravity="center"
                android:fontFamily="sans-serif-thin"
                tools:layout_constraintTop_creator="1"
                tools:layout_constraintRight_creator="1"
                app:layout_constraintRight_toRightOf="@+id/linearLayout"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
    </LinearLayout>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/gear"
            android:id="@+id/serverChanger"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
    />
</android.support.constraint.ConstraintLayout>
